cmake_minimum_required(VERSION 3.10)

project(ElaWidgetTools VERSION 1.0 LANGUAGES CXX)

file(GLOB COMMON_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaCommon/*.h)
file(GLOB COMMON_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaCommon/*.cpp)

file(GLOB FLOWLAYOUT_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaFlowLayout/*.h)
file(GLOB FLOWLAYOUT_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaFlowLayout/*.cpp)

file(GLOB MESSAGEBUTTON_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaMessageButton/*.h)
file(GLOB MESSAGEBUTTON_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaMessageButton/*.cpp)

file(GLOB ELATEXT_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaText/*.h)
file(GLOB ELATEXT_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaText/*.cpp)

file(GLOB ELAPLAINTEXTEDIT_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaPlainTextEdit/*.h)
file(GLOB ELAPLAINTEXTEDIT_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaPlainTextEdit/*.cpp)

file(GLOB ELALINEEDIT_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaLineEdit/*.h)
file(GLOB ELALINEEDIT_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaLineEdit/*.cpp)

file(GLOB ELATOOLTIP_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaToolTip/*.h)
file(GLOB ELATOOLTIP_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaToolTip/*.cpp)

file(GLOB ELAEXITDIALOG_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaExitDialog/*.h)
file(GLOB ELAEXITDIALOG_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaExitDialog/*.cpp)

file(GLOB ELAPUSHBUTTON_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaPushButton/*.h)
file(GLOB ELAPUSHBUTTON_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaPushButton/*.cpp)

file(GLOB ELAEVENTBUS_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaEventBus/*.h)
file(GLOB ELAEVENTBUS_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaEventBus/*.cpp)

file(GLOB ELAMENU_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaMenu/*.h)
file(GLOB ELAMENU_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaMenu/*.cpp)

file(GLOB ELASCROLLBAR_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaScrollBar/*.h)
file(GLOB ELASCROLLBAR_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaScrollBar/*.cpp)

file(GLOB ELATOGGLESWITCH_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaToggleSwitch/*.h)
file(GLOB ELATOGGLESWITCH_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaToggleSwitch/*.cpp)

file(GLOB ELASUGGESTBOX_H ${CMAKE_CURRENT_SOURCE_DIR}/ElaSuggestBox/*.h)
file(GLOB ELASUGGESTBOX_CPP ${CMAKE_CURRENT_SOURCE_DIR}/ElaSuggestBox/*.cpp)

set(SOURCE_FILE
        ${COMMON_H}
        ${COMMON_CPP}
        ${FLOWLAYOUT_H}
        ${FLOWLAYOUT_CPP}
        ${MESSAGEBUTTON_H}
        ${MESSAGEBUTTON_CPP}
        ${ELATEXT_H}
        ${ELATEXT_CPP}
        ${ELAPLAINTEXTEDIT_H}
        ${ELAPLAINTEXTEDIT_CPP}
        ${ELALINEEDIT_H}
        ${ELALINEEDIT_CPP}
        ${ELATOOLTIP_H}
        ${ELATOOLTIP_CPP}
        ${ELAEXITDIALOG_H}
        ${ELAEXITDIALOG_CPP}
        ${ELAPUSHBUTTON_H}
        ${ELAPUSHBUTTON_CPP}
        ${ELAEVENTBUS_H}
        ${ELAEVENTBUS_CPP}
        ${ELAMENU_H}
        ${ELAMENU_CPP}
        ${ELASCROLLBAR_H}
        ${ELASCROLLBAR_CPP}
        ${ELATOGGLESWITCH_H}
        ${ELATOGGLESWITCH_CPP}
        ${ELASUGGESTBOX_H}
        ${ELASUGGESTBOX_CPP}
)

add_library(${PROJECT_NAME} SHARED ${SOURCE_FILE})

target_compile_definitions(${PROJECT_NAME} PRIVATE ELAWIDGETTOOLS_LIBRARY)

# 指定库的包含目录
target_include_directories(${PROJECT_NAME} PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaCommon
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaFlowLayout
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaMessageButton
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaText
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaPlainTextEdit
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaLineEdit
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaToolTip
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaExitDialog
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaPushButton
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaEventBus
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaMenu
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaScrollBar
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaToggleSwitch
        ${CMAKE_CURRENT_SOURCE_DIR}/ElaSuggestBox
)

target_link_libraries(${PROJECT_NAME} Qt6::Widgets Qt6::Core Qt6::Network MySpdlog MyAsyncThread MyHttpClient)
